update from Release12

--- a/web/commands.html
+++ b/web/commands.html
@@ -60,6 +60,9 @@ ASAP> commands
             get_tsys        - get the TSys
             get_time        - get the timestamps of the integrations
             get_sourcename  - get the source names of the scans
+            get_azimuth     - get the azimuth of the scans
+            get_elevation   - get the elevation of the scans
+            get_parangle    - get the parallactic angle of the scans
             get_unit        - get the currnt unit
             set_unit        - set the abcissa unit to be used from this
                               point on
@@ -102,6 +105,8 @@ ASAP> commands
             smooth          - return the spectrally smoothed scan
             poly_baseline   - fit a polynomial baseline to all Beams/IFs/Pols
             auto_poly_baseline - automatically fit a polynomial baseline
+            recalc_azel     - recalculate azimuth and elevation based on
+                              the pointing
             gain_el         - apply gain-elevation correction
             opacity         - apply opacity correction
             convert_flux    - convert to and from Jy and Kelvin brightness
