Web doc update for usage of ASAP v2

--- a/web/intro.html
+++ b/web/intro.html
@@ -43,6 +43,7 @@ several <a href="http://aips2.nrao.edu/daily/docs/casa.html">casa</a>
 libraries.
 It has been developed in the last nine months and has been released to
 ATNF users.
+ASAP v2.0 underwent a major re-design to support varying numbers of channels per IF (or Beam). It also allows much more flexible data selection via the <b>seletcor</b> object.
 Currently, the package has only been tested on linux (debian) system,
 other linux and OSX binaries are going to be avaliable soon.
 <br>
