--- a/web/commands.html
+++ b/web/commands.html
@@ -40,8 +40,7 @@ title_crumbs("/computing/software/");
 <!-- Start Content -->
 <h1><a href="index.html">ASAP</a> 'commands'</h1>
 <pre class="commands">
-ASAP> commands
-----> commands()
+ASAP> commands()
 
     [The scan container]
         scantable           - a container for integrations/scans
@@ -49,10 +48,9 @@ ASAP> commands
             copy            - returns a copy of a scan
             get_scan        - gets a specific scan out of a scantable
                               (by name or number)
+            set_selection   - set a new subselection of the data
+            get_selection   - get the current selection object
             summary         - print info about the scantable contents
-            set_cursor      - set a specific Beam/IF/Pol 'cursor' for
-                              further use
-            get_cursor      - print out the current cursor position
             stats           - get specified statistic of the spectra in
                               the scantable
             stddev          - get the standard deviation of the spectra
@@ -63,7 +61,7 @@ ASAP> commands
             get_azimuth     - get the azimuth of the scans
             get_elevation   - get the elevation of the scans
             get_parangle    - get the parallactic angle of the scans
-            get_unit        - get the currnt unit
+            get_unit        - get the current unit
             set_unit        - set the abcissa unit to be used from this
                               point on
             get_abcissa     - get the abcissa values and name for a given
@@ -71,6 +69,7 @@ ASAP> commands
             set_freqframe   - set the frame info for the Spectral Axis
                               (e.g. 'LSRK')
             set_doppler     - set the doppler to be used from this point on
+            set_dirframe    - set the frame for the direction on the sky
             set_instrument  - set the instrument name
             get_fluxunit    - get the brightness flux unit
             set_fluxunit    - set the brightness flux unit
@@ -79,13 +78,12 @@ ASAP> commands
                               are NOT masked
             get_restfreqs   - get the current list of rest frequencies
             set_restfreqs   - set a list of rest frequencies
-            lines           - print list of known spectral lines
-            flag_spectrum   - flag a whole Beam/IF/Pol
+            flag            - flag selected channels in the data
             save            - save the scantable to disk as either 'ASAP'
                               or 'SDFITS'
             nbeam,nif,nchan,npol - the number of beams/IFs/Pols/Chans
             nscan           - the number of scans in the scantable
-            nrow            - te number of integrations in the scantable
+            nrow            - te number of spectra in the scantable
             history         - print the history of the scantable
             get_fit         - get a fit which has been stored witnh the data
             average_time    - return the (weighted) time average of a scan
@@ -94,12 +92,12 @@ ASAP> commands
                               The dimension won't be reduced and
                               all polarisations will contain the
                               averaged spectrum.
+            convert_pol     - convert to a different polarisation type
             auto_quotient   - return the on/off quotient with
                               automatic detection of the on/off scans
                               (matched pairs and 1 off - n on)
-            quotient        - return the on/off quotient
-            scale           - return a scan scaled by a given factor
-            add             - return a scan with given value added
+            scale, *, /     - return a scan scaled by a given factor
+            add, +, -       - return a scan with given value added
             bin             - return a scan with binned channels
             resample        - return a scan with resampled channels
             smooth          - return the spectrally smoothed scan
@@ -112,6 +110,8 @@ ASAP> commands
             convert_flux    - convert to and from Jy and Kelvin brightness
                               units
             freq_align      - align spectra in frequency frame
+            invert_phase    - Invert the phase of the cross-correlation
+            swap_linears    - Swap XX and YY
             rotate_xyphase  - rotate XY phase of cross correlation
             rotate_linpolphase - rotate the phase of the complex
                                  polarization O=Q+iU correlation
@@ -120,6 +120,18 @@ ASAP> commands
                               'max', 'rms' etc.
             stddev          - Determine the standard deviation of the current
                               beam/if/pol
+     [Selection]
+         selector              - a selection object to set a subset of a scantable
+            set_scans          - set (a list of) scans by index
+            set_cycles         - set (a list of) cycles by index
+            set_beams          - set (a list of) beamss by index
+            set_ifs            - set (a list of) ifs by index
+            set_polarisations  - set (a list of) polarisations by name
+                                 or by index
+            set_names          - set a selection by name (wildcards allowed)
+            set_tsys           - set a selection by tsys thresholds
+            reset              - unset all selections
+            +                  - merge to selections
 
      [Math] Mainly functions which operate on more than one scantable
 
@@ -135,7 +147,7 @@ ASAP> commands
             commit          - return a new scan where the fits have been
                               commited.
             fit             - execute the actual fitting process
-            store_fit       - store the fit paramaters in the data (scantable)
+            store_fit       - store the fit parameters in the data (scantable)
             get_chi2        - get the Chi^2
             set_scan        - set the scantable to be fit
             set_function    - set the fitting function
@@ -149,12 +161,12 @@ ASAP> commands
     [Plotter]
         asapplotter         - a plotter for asap, default plotter is
                               called 'plotter'
-            plot            - plot a (list of) scantable
+            plot            - plot a scantable
             save            - save the plot to a file ('png' ,'ps' or 'eps')
             set_mode        - set the state of the plotter, i.e.
                               what is to be plotted 'colour stacked'
                               and what 'panelled'
-            set_cursor      - only plot a selected part of the data
+            set_selection   - only plot a selected part of the data
             set_range       - set a 'zoom' window [xmin,xmax,ymin,ymax]
             set_legend      - specify user labels for the legend indeces
             set_title       - specify user labels for the panel indeces
@@ -164,10 +176,13 @@ ASAP> commands
             set_colors      - specify a set of colours to use
             set_linestyles  - specify a set of linestyles to use if only
                               using one color
+            set_histrogra,  - plot in historam style
             set_mask        - set a plotting mask for a specific polarization
 
     [Reading files]
         reader              - access rpfits/sdfits files
+            open            - attach reader to a file
+            close           - detach reader from file
             read            - read in integrations
             summary         - list info about all integrations
 
@@ -175,6 +190,7 @@ ASAP> commands
         commands            - this command
         print               - print details about a variable
         list_scans          - list all scantables created bt the user
+        list_files          - list all files readable by asap (default rpf)
         del                 - delete the given variable from memory
         range               - create a list of values, e.g.
                               range(3) = [0,1,2], range(2,5) = [2,3,4]
@@ -196,7 +212,6 @@ ASAP> commands
             ASAP> help scantable # to get info on ths scantable
             ASAP> help scantable.summary # to get help on the scantable's
             ASAP> help average_time
-
 
 </pre>
 <!-- End Content -->
