--- a/web/index.html
+++ b/web/index.html
@@ -46,7 +46,7 @@ ATNF instruments and reads/writes <em>rpfits, sdfits and ms</em> data.
 <a href="intro.html">more...<a>
 
 <h2>Current Release</h2>
-ASAP latest stable version 1.2.1 was released on December, 6<sup>th</sup> 2005. It can be obtained in the <a href="#download">Download</a> section.
+ASAP latest stable version 2.0 was released on April, 27<sup>th</sup> 2006. It can be obtained in the <a href="#download">Download</a> section.
 
 <h2>Screenshots</h2>
 <a href="screenshots.html">Here</a> are some example plots.
@@ -55,10 +55,10 @@ ASAP latest stable version 1.2.1 was released on December, 6<sup>th</sup> 2005. 
 To get started, simply type "asap" at the *nix command line prompt.
 <pre style="color: blue">
 Loading ASAP...
-Welcome to ASAP v1.2.1 (2005/12/06) - the ATNF Spectral Analysis Package
+Welcome to ASAP v2.0 (2006/04/27) - the ATNF Spectral Analysis Package
 
-Please report any bugs to:
-asap@atnf.csiro.au
+Please report any bugs via:
+http://sourcecode.atnf.csiro.au/cgi-bin/trac_asap.cgi/newticket
 
 [IMPORTANT: ASAP is 0-based]
 Type commands() to get a list of all available ASAP commands.
