Updated website to point to ftp directly and the new trac server

--- a/web/index.html
+++ b/web/index.html
@@ -67,9 +67,9 @@ ASAP>
 </pre>
 
 <h2>Defects and enhancement requests</h2>
-Bugs and enhancement requests can be submitted online, via the <a href="http://sourcecode.atnf.csiro.au/cgi-bin/trac_asap.cgi/newticket">
+Bugs and enhancement requests can be submitted online, via the <a href="http://svn.atnf.csiro.au//trac/asap/newticket">
 <b class="asap">ASAP</b> project tracking page</a>. Please also check if the defect has already been submitted under
-<a href="http://sourcecode.atnf.csiro.au/cgi-bin/trac_asap.cgi/report/1">current tickets</a>.
+<a href="http://svn.atnf.csiro.au/trac/asap/report/1">current tickets</a>.
 If the trac system tells you that your submission has been considered spam, please log in with the username "bugs" and password "mops".
 
 <h2>Documentation</h2>
@@ -81,12 +81,12 @@ and analyse their data.
   <li> User Guide <a href="userguide/">(html)</a> <a href="userguide.pdf">(pdf)</a></li>
   <li> Reference manual <a href="refman/">(html)</a> <a href="refman.pdf">(pdf)</a></li>
   <li><a href="tutorials/">Tutorials</a></li>
-  <li>For FAQ's go to the <a href="http://sourcecode.atnf.csiro.au/cgi-bin/trac_asap.cgi/wiki/AsapFaq"></a>
+  <li>For FAQ's go to the <a href="http://svn.atnf.csiro.au/cgi-bin/trac/asap/wiki/AsapFaq"></a>
 </ul>
 <p>
 More detailed help is available via the <b>help</b> function.
 <p>
-The <a href="http://sourcecode.atnf.csiro.au/cgi-bin/trac_asap.cgi">Trac page</a>
+The <a href="http://svn.atnf.csiro.au/trac/asap">Trac page</a>
 for <b class="asap">ASAP</b> also contains information about building from source and some more detailed information. It also shows information regarding release dates and milestones.
 
 
@@ -109,8 +109,8 @@ to asap-users-request@atnf.csiro.au with the single word
 
 
 <a name="download"><h2>Download</h2></a>
-<b class="asap">ASAP</b> binaries are available in the <a href="http://www.atnf.csiro.au/pub/software/asap/current">ATNF ftp area</a>
-Please also consult the <a href="http://sourcecode.atnf.csiro.au/cgi-bin/trac_asap.cgi/wiki">wiki</a>
+<b class="asap">ASAP</b> binaries are available in the <a href="ftp://ftp.atnf.csiro.au/pub/software/asap/current">ATNF ftp area</a>
+Please also consult the <a href="http://svn.atnf.csiro.au/trac/asap">wiki</a>
 <ul>
   <li> We provide binaries for debian, fedora and OSX based systems. If yours isn't there
   send a request giving details about your flavour of linux.
