updated to version 2.2.0

--- a/web/index.html
+++ b/web/index.html
@@ -46,7 +46,7 @@ ATNF instruments and reads/writes <em>rpfits, sdfits and ms</em> data.
 <a href="intro.html">more...<a>
 
 <h2>Current Release</h2>
-<b class="asap">ASAP</b> latest stable version 2.1 was released on September, 11<sup>th</sup> 2006. It can be obtained in the <a href="#download">Download</a> section.
+<b class="asap">ASAP</b> latest stable version 2.2 was released on May, 2<sup>tnd</sup> 2007. It can be obtained in the <a href="#download">Download</a> section.
 
 <h2>Screenshots</h2>
 <a href="screenshots.html">Here</a> are some example plots.
@@ -55,10 +55,10 @@ ATNF instruments and reads/writes <em>rpfits, sdfits and ms</em> data.
 To get started, simply type "asap" at the *nix command line prompt.
 <pre style="color: blue">
 Loading ASAP...
-Welcome to ASAP v2.1 (release date) - the ATNF Spectral Analysis Package
+Welcome to ASAP v2.2.x (release date) - the ATNF Spectral Analysis Package
 
 Please report any bugs via:
-http://sourcecode.atnf.csiro.au/cgi-bin/trac_asap.cgi/newticket
+http://svn.atnf.csiro.au/trac/asap/newticket
 
 [IMPORTANT: ASAP is 0-based]
 Type commands() to get a list of all available ASAP commands.
@@ -117,7 +117,7 @@ Please also consult the <a href="http://svn.atnf.csiro.au/trac/asap">wiki</a>
   </li>
   <li><b class="asap">ASAP</b> source code is available through our subversion repository
     <pre>
-        svn co http://sourcecode.atnf.csiro.au/repos/asap/tags/asap2.1.1
+        svn co http://sourcecode.atnf.csiro.au/repos/asap/tags/asap2.2.0
     </pre>
   </li>
 </ul>
