--- a/web/index.html
+++ b/web/index.html
@@ -46,7 +46,7 @@ ATNF instruments and reads/writes <em>rpfits, sdfits and ms</em> data.
 <a href="intro.html">more...<a>
 
 <h2>Current Release</h2>
-<b class="asap">ASAP</b> latest stable version 2.2 was released on May, 2<sup>tnd</sup> 2007. It can be obtained in the <a href="#download">Download</a> section.
+<b class="asap">ASAP</b> latest stable version 2.2 was released on May, 2<sup>nd</sup> 2007. It can be obtained in the <a href="#download">Download</a> section.
 
 <h2>Screenshots</h2>
 <a href="screenshots.html">Here</a> are some example plots.
