changed url to ticket system

--- a/web/index.html
+++ b/web/index.html
@@ -67,7 +67,7 @@ ASAP>
 </pre>
 
 <h2>Defects and enhancement requests</h2>
-Bugs and enhancement requests can be submitted online, via the <a href="http://svn.atnf.csiro.au//trac/asap/newticket">
+Bugs and enhancement requests can be submitted online, via the <a href="http://svn.atnf.csiro.au//trac/asap/simpleticket">
 <b class="asap">ASAP</b> project tracking page</a>. Please also check if the defect has already been submitted under
 <a href="http://svn.atnf.csiro.au/trac/asap/report/1">current tickets</a>.
 If the trac system tells you that your submission has been considered spam, please log in with the username "bugs" and password "mops".
