--- a/web/index.html
+++ b/web/index.html
@@ -117,7 +117,7 @@ Please also consult the <a href="http://svn.atnf.csiro.au/trac/asap">wiki</a>
   </li>
   <li><b class="asap">ASAP</b> source code is available through our subversion repository
     <pre>
-        svn co http://sourcecode.atnf.csiro.au/repos/asap/tags/asap2.2.0
+        svn co http://svn.atnf.csiro.au/asap/tags/asap2.2.0
     </pre>
   </li>
 </ul>
