--- a/web/index.html
+++ b/web/index.html
@@ -48,6 +48,11 @@ ATNF instruments and reads/writes <em>rpfits, sdfits and ms</em> data.
 <h2>Current Release</h2>
 <b class="asap">ASAP</b> latest stable version 2.2 was released on May, 2<sup>nd</sup> 2007. It can be obtained in the <a href="#download">Download</a> section.
 
+<div style="color: red;">
+  Note: Due to a bug in this release, Mopra users should follow <a href="https://svn.atnf.csiro.au/trac/asap/wiki/AsapFaq" >these</a> instructions.
+</div>
+  
+
 <h2>Screenshots</h2>
 <a href="screenshots.html">Here</a> are some example plots.
 
